--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "version": "1.0.0",
     "scripts": {
         "dev": "parcel src/index.html",
-        "build": "parcel build src/index.html"
+        "build": "parcel build src/index.html",
+        "check": "tsc --watch"
     },
     "keywords": [],
     "author": "",
@@ -23,6 +24,10 @@
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-airbnb-typescript": "^17.0.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-jsx-a11y": "^6.7.1",
+        "eslint-plugin-react": "^7.32.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
         "parcel": "^2.8.3",
         "process": "^0.11.10",
         "typescript": "^5.0.4"
