Added the custom hook to check if user is logged in

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "alias": {
         "components": "./src/components/",
         "contexts": "./src/contexts/",
+        "hooks": "./src/hooks",
         "styles": "./src/styles/",
         "utils": "./src/utils/"
     }
