--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
         "paths": {
             "components/*": ["src/components/*"],
             "contexts/*": ["src/contexts/*"],
+            "hooks/*": ["src/hooks/*"],
             "styles/*": ["src/styles/*"],
             "utils/*": ["src/utils/*"],
         },
